css/styles.css
* { 
	box-sizing: border-box; 
} 

img {
	max-width: 100%;
}

body {
	font-family: 'Roboto', sans-serif;
	min-width: 900px;
}

.clearfix:after {
	content: "";
	display: table;
	clear:both;
}

.wrapper {
	max-width: 1200px;
	min-width: 900px;
	margin: 0 auto;
	padding-left: 27px;
	padding-right: 27px;
	background: #859D8F;
	position: relative;
}

body {
	background: #859D8F;
}


/*=============== Header ===============*/


header {
	position: absolute;
	top:0;
	left:0;
	z-index: 10;
	width: 100%;
	padding-left: 27px;
	padding-right: 27px;
}

.top-menu {
	float: left;
	padding-top: 10px;
	width: 65%;
}

.logo {
	display: block;
	float: left;
	margin-right: 15px;
	margin-top: 5px;
}

.logo:hover {
	opacity: 0.8;
}

.main-menu {
	display: inline-block;
	margin: 0;
	padding: 0;
	margin-top: 18px;
	list-style: none;
	position: relative;
}

.main-menu span {
	border-bottom: 1px solid #b6c5bd;
}

.main-menu li:hover span {
	border-bottom: none;
}

.main-menu > li{
	display: inline-block;
	margin-right: -5px;
	padding-bottom: 10px;
}

.main-menu > li > a {
	display: block;
	padding: 6px 13px;
	font-size: 16px;
	border-radius: 20px;
	color: #fff;
	text-decoration: none;
}

.main-menu > li:hover > a {
	color: #000;
	background: #f7f6f3;
}

.main-menu > li > a:active {
	box-shadow: inset 0 2px 1px  #666;
	background: #ededed;  /*для активной кнопки фон #d07058, color:#fff;*/
	color: #333;
}

.catalog-submenu {
	margin: 0;
	padding: 0;
	list-style: none;
	position: absolute;
	top:36px;
	left: -10px;
	background: #f8f7f4;
	border-radius: 5px;
	box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.4);
	display: none;
	z-index: 1;
}

.catalog:hover .catalog-submenu {
	display: block;
}

.catalog-submenu li {
	padding: 7px;
	margin: 3px 0;
}

.catalog-submenu li:hover {
	background-color: #fbded7;
}

.catalog-submenu li:first-child {
	margin: 0px 6px 0px;
	font-weight: bold;
	border-bottom: 1px solid #d1d0ce;
}

.catalog-submenu li:first-child:hover {
	background-color: #f8f7f4;
}

.catalog-submenu li:first-child:hover a {
	color: #ED573C;
	text-decoration: underline;
}

.catalog-submenu li:active {
	background-color: #f6b5a5; /*page active #d07058, color #fff*/
}

.catalog-submenu a {
	display: block;
	padding: 0 12px;
	font-size: 14px;
	text-decoration: none;
	color: #000;
}

.catalog-submenu li:first-child a {
	padding: 5px 8px;
}


/*=============== Header right ===============*/


.header-right {
	float: right;
	width: 35%;
	text-align: right;
	padding-top: 19px;
}

.header-right > div {
	display: inline-block;
	margin-right: -7px;
}


/*========== Search ===========*/


.search-form {
	position: relative;
}

.search-btn-container {
	padding: 8px;
}

.search-btn {
	display: block;
	cursor: pointer;
	width: 33px;
	height: 33px;
	border: none;
	border-radius: 50%;
	color: transparent;
	outline: none;
	background: #a1b5a9 url(../img/header-icon-sprite.png) no-repeat -5px -5px;
}

.search-btn:hover {
	background: #f8f7f4 url(../img/header-icon-sprite.png) no-repeat -5px -52px;
}

.search-modal {
	width: 270px;
	padding: 15px;
	background: #f8f7f4;
	border-radius: 5px;
	box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.4);
	position: absolute;
	top:47px;
	right: 0px;
	display: none;
	z-index: 1;
}

.search-field {
	border-radius: 3px;
	border: 1px solid #d3d3d2;
	padding: 10px;
	font-size: 14px;
	outline: none;
	width: 100%;
}

.search-field:hover {
	padding: 9px;
	border: 2px solid #C6C6C6;
}

.search-field:focus {
	padding: 9px;
	border: 2px solid #8FBEEC;
}

.search-form:hover .search-modal {
	display: block;
}


/*========== Login ===========*/


.login {
	position: relative;
}

.login-btn-container {
	padding: 8px;
}

.login-btn {
	display: block;
	cursor: pointer;
	border-radius: 22px;
	font-size: 14px;
	color: #fff;
	background: #a1b5a9 url(../img/header-icon-sprite.png) no-repeat 5px -101px;
	text-decoration: none;
	padding: 8px 15px 8px 42px;
}

.login-btn:hover {
	background: #f8f7f4 url(../img/header-icon-sprite.png) no-repeat 5px -155px;
	color: #323232;
}

.login-modal {
	position: absolute;
	width: 270px;
	padding: 15px;
	padding-top: 0;
	text-align: left;
	background: #f8f7f4;
	border-radius: 5px;
	box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.4);
	position: absolute;
	top:46px;
	right: 0px;
	display: none;
	z-index: 1;
}

.login:hover .login-modal {
	display: block;
}

.login-modal input[type="email"],
.login-modal input[type="password"] {
	border-radius: 3px;
	border: 1px solid #d3d3d2;
	padding: 10px;
	font-size: 14px;
	width: 100%;
	outline: none;
}

.login-modal input[type="email"]:hover,
.login-modal input[type="password"]:hover {
	padding: 9px;
	border: 2px solid #C6C6C6;
}

.login-modal input[type="email"]:focus,
.login-modal input[type="password"]:focus {
	padding: 9px;
	border: 2px solid #8FBEEC;
}

.login-modal input[type="email"] {
	margin-bottom: -5px;
}

.login-modal input[type="submit"] {
	float: left;
	font-size: 15px;
	font-weight: bold;
	color: #fff;
	padding: 7px 30px;
	border:none;
	border-radius: 20px;
	background-color: #f16e4b;
	background: linear-gradient(#f16e4b, #e74b36);
	box-shadow: 0 2px 3px rgba(172, 16, 0, 0.7); 
	outline: none;
	cursor: pointer;
	margin-right: 15px;
}

.login-modal input[type="submit"]:hover {
	background: linear-gradient(#f48a6f, #e86857);
	box-shadow: 0 1px 2px #ac1000; 
}

.login-modal input[type="submit"]:active {
	background: linear-gradient(#d74632, #e1613e);
	box-shadow: inset 0 2px 2px #942718; 
}

.login-modal a {
	display: block;
	font-size: 13px;
	color:#333;
	margin-bottom: 2px;
}

.login-modal a:hover {
	color: #ec593c;
}


/*========== Cart ===========*/


.cart {
	position: relative;
}

.cart-btn-container {
	padding: 8px;
}

.cart-btn {
	display: block;
	cursor: pointer;
	width: 120px;
	text-align: left;
	border-radius: 22px;
	font-size: 14px;
	color: #fff;
	background: #a1b5a9 url(../img/header-icon-sprite.png) no-repeat 5px -209px;
	text-decoration: none;
	padding: 8px 15px 8px 42px;
}
/* ... */

